# swifty-artifacts

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: how_does_swifty_work.md
examples/: minimal.rs
src/: builder.rs  checksum.rs  io.rs  lib.rs  model.rs  path.rs  pbo.rs  scan.rs  ticks.rs
tests/: builder.rs  cli.rs  ignore_paths.rs  json_compat.rs  pbo_fixture.rs  pbo_non_ascii_entry.rs  real_fixtures.rs
tests/fixtures/: ace_fonts.pbo  example_mod.srf  example_pbo.pbo  example_repo.json
